vlib/v/checker/tests/or_block_check_err.vv
fn callexpr_with_or_block_call() !string {
	return error('')
}

fn main() {
	_ = callexpr_with_or_block_call() or {}.replace('a', 'b')
	_ = (callexpr_with_or_block_call() or {}).replace('a', 'b')

	_ = callexpr_with_or_block_call() or { eprintln('error') }.replace('a', 'b')
	_ = (callexpr_with_or_block_call() or { eprintln('error') }).replace('a', 'b')
}
